--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="icon" href="/favicon.ico">
+    <link rel="icon" href="/favicon.ico" />
     <title>plaid-app</title>
     <script type="module" src="/src/index.jsx"></script>
     <script src="https://cdn.plaid.com/link/v2/stable/link-initialize.js"></script>
